src/main/resources/META-INF/resources/rbs/css/rbs.css
@import url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css');
@import url('//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css');

/* apply font smoothing everywhere */
body {
    -webkit-font-smoothing: antialiased;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
}

/* correct spacing within alerts */
.alert > * + * {
    margin-left: 0.3em;
}

.btn > * + .caret {
    margin-left: 0.3em !important;
}

/* no resizing of textarea in forms */
textarea.form-control {
    resize: none;
}

/*
form-group checkboxes
*/
.form-group > input[type="checkbox"].form-control {
    float: left;
    margin-right: 0.3em;
    height: initial;
    width: initial;
}

/* default loading wrapper styling */
.loading-indicator-container {
    position: relative;
}

.loading-indicator-container .loading-indicator-backdrop {
    background-color: rgba(0, 0, 0, 0.1);
    z-index: 1000;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.loading-indicator-container .loading-indicator {
    position: absolute;
    z-index: 1001;
    top: 35%;
    left: 50%;
    margin-left: -50px;
    width: 100px;
    text-align: center;
}

/*
 Anything that comes before a glyphicon should have some space to the right of it
*/
.fa + * {
    margin-left: 0.4em;
}

* + .fa {
    margin-left: 0.4em;
}

.navbar-text {
    padding-left: 1em;
}

/**
Modals display always. We use transition groups to manage whether they're visible,
so they're removed from the DOM when they're not
*/
.modal {
    display: block !important;
    overflow-y: auto !important;
    opacity: 1;
}

.Modal-backdrop {
    background-color: rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1040;
}

/* dropdown menus display always, using transition groups to manage whether they're visible */
.dropdown-menu {
    display: block !important;
}

/*table stuff*/
.sortable-column-header {
    cursor: pointer;
    white-space: nowrap;
}

@media (max-width: 768px) {
    table.table-responsive-horizontal {
        table-layout: fixed;
    }

    table.table-responsive-horizontal > tbody > tr > td > span {
        display: inline-block;
        overflow-x: hidden;
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
        max-width: 100%;
    }

    table.table-responsive-horizontal > thead {
        display: none;
    }

    table.table-responsive-horizontal > tbody > tr > td::before {
        content: attr(data-title);
        display: block;
        text-align: left;
        font-weight: bolder;
    }

    table.table-responsive-horizontal > tbody > tr {
        border: 0.1em solid gray;
    }

    table.table-responsive-horizontal > tbody > tr > td {
        display: block;
    }
}

/* Tooltips */
.tip-container {
    z-index: 1;
    margin-left: 0.3em;
    display: inline-block;
    position: relative;
}

/* the actual tip */
.tip-container .tip {
    z-index: 0;
    width: 11em;
    position: absolute;
    padding: 0.3em;
    box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.2);
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 0.2em;
    background-color: white;
}

.tip-container .arrow {
    z-index: 1;
    position: absolute;
    top: 50%;
    width: 0;
    height: 0;
}

/* this is true for left and right tips */
.tip-container .tip-right .tip, .tip-container .tip-left .tip {
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}

.tip-container .tip-right .arrow, .tip-container .tip-left .arrow {
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}

/* tip is off to the right */
.tip-container .tip-right .tip {
    left: 100%;
    margin-left: 0.45em;
}

.tip-container .tip-right .arrow {
    left: 100%;
    border-top: 0.5em solid transparent;
    border-bottom: 0.5em solid transparent;
    border-right: 0.5em solid rgba(0, 0, 0, 0.2);
}

/* tip is off to the left */
.tip-container .tip-left .tip {
    right: 100%;
    margin-right: 0.45em;
}

.tip-container .tip-left .arrow {
    right: 100%;
    border-top: 0.5em solid transparent;
    border-bottom: 0.5em solid transparent;
    border-left: 0.5em solid rgba(0, 0, 0, 0.2);
}

/* this is true for top and bottom tips */
.tip-container .tip-top .tip, .tip-container .tip-bottom .tip {
    margin-left: 50%;
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);
}

.tip-container .tip-top .arrow, .tip-container .tip-bottom .arrow {
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);
}

/* for top tips */
.tip-container .tip-top .tip {
    bottom: 100%;
    margin-bottom: 0.45em;
}

.tip-container .tip-top .arrow {
    /*these don't work for some reason*/
    display: none;
    border-left: 0.5em solid transparent;
    border-right: 0.5em solid transparent;
    border-top: 0.5em solid rgba(0, 0, 0, 0.2);
    bottom: 100%;
}

/* for bottom tips */
.tip-container .tip-bottom .tip {
    top: 100%;
    margin-top: 0.45em;
}

.tip-container .tip-bottom .arrow {
    /*these don't work for some reason*/
    display: none;
    border-left: 0.5em solid transparent;
    border-right: 0.5em solid transparent;
    border-bottom: 0.5em solid rgba(0, 0, 0, 0.2);
    top: 100%;
}

/* Since these can be clicked, they should have a pointer */
.form-group > label[for] {
    cursor: pointer;
}

/*
 select control styling
*/
/* the container returned by the fancy select */
.react-select-container {
    position: relative;
}
/* ... */

